--- a/index.html
+++ b/index.html
@@ -59,11 +59,28 @@
 
           reader.onload = function(evt){
             muncher.munch(evt.target.result);
-            // console.log(evt.target.result);
 
-            console.log(munchPile);
+            var munchTree = [];
+            var munches = 0;
+            for(var i=munchPile.length-1;i>=0;i--){
+              var curr = munchPile[i];
+              // Put depth1 in output
+              if(curr.depth === 1) {
+                munchTree.splice(0, 0, curr);
+                continue;
+              }
+              // Find the nearest thing with a lower depth
+              // and add this as a child
+              for(var x=i;x>=0;x--){
+                if(munchPile[x].depth < curr.depth){
+                  munchPile[x].children.splice(0, 0, curr);
+                  break;
+                }
+              }
+            }
 
-          
+            console.log(munchTree);
+
           }
 
           reader.readAsText(selectedFile);
