--- a/index.html
+++ b/index.html
@@ -2,8 +2,30 @@
 <html>
   <head>
     <title>Code Music</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+
+  </head>
+
+  <body>
+
+    <div class="container">
+      <div class="row">
+        <div class="span12">
+          <h1>Code Music</h1>
+        </div>
+      </div>
+
+      <div class="row">
+        <input type="file" id="fileBrowser">
+        <input type="button" id="go" value="Go">
+      </div>
+    </div>
 
     <script src='./js/jquery-1.9.1.js'></script>
+    <script src="./js/bootstrap.min.js"></script>
     <script src='./js/compiled-codemuncher.js'></script>
 
     <script>
@@ -93,9 +115,5 @@
 
   </head>
 
-  <body>
-    <input type="file" id="fileBrowser">
-    <input type="button" id="go" value="Go">
-  
   </body>
 </html>
