--- a/index.html
+++ b/index.html
@@ -24,9 +24,23 @@
       </div>
     </div>
 
+    <!-- midi.js package -->
+    <script src="./audio/MIDI.js-master/js/MIDI/AudioDetect.js" type="text/javascript"></script>
+    <script src="./audio/MIDI.js-master/js/MIDI/LoadPlugin.js" type="text/javascript"></script>
+    <script src="./audio/MIDI.js-master/js/MIDI/Plugin.js" type="text/javascript"></script>
+    <script src="./audio/MIDI.js-master/js/MIDI/Player.js" type="text/javascript"></script>
+    <script src="./audio/MIDI.js-master/js/Window/DOMLoader.XMLHttp.js" type="text/javascript"></script>
+    <script src="./audio/MIDI.js-master/js/Window/DOMLoader.script.js" type="text/javascript"></script>
+    <!-- extras -->
+    <script src="./audio/MIDI.js-master/inc/WebMIDIAPI.js" type="text/javascript"></script>
+    <script src="./audio/MIDI.js-master/inc/Base64.js" type="text/javascript"></script>
+    <script src="./audio/MIDI.js-master/inc/base64binary.js" type="text/javascript"></script>
+
     <script src='./js/jquery-1.9.1.js'></script>
     <script src="./js/bootstrap.min.js"></script>
     <script src='./js/compiled-codemuncher.js'></script>
+    <script src="./audio/test.js"></script>
+
     <script src='./js/main.js'></script>
 
   </head>
