Added lintErrors count to munches

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 
     <script src='./js/jquery-1.9.1.js'></script>
     <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/jslint.js"></script>
     <script src='./js/compiled-codemuncher.js'></script>
     <script src="./audio/test.js"></script>
 
