--- a/index.html
+++ b/index.html
@@ -25,14 +25,17 @@
       <!--   </div> -->
       <!-- </div> -->
 
-      <div class="row cm-dragbox">
+      <div class="row cm-errors">
+        <div class="cm-alert-container span8 offset2">
+          <div class="alert alert-error hidden"></div>
+        </div>
       </div>
 
       <div class="row cm-controls">
         <div id="dragBox" class="span8 offset2">
           <div class="row">
             <div class="cm-drag-label span8">
-              Drag in a file
+              Drag a javascript file here
             </div>
           </div>
         </div>
