--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 
     </div>
 
+    <a href="https://github.com/dansitu/codemusic"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
+
     <!-- midi.js package -->
     <script src="./audio/MIDI.js-master/js/MIDI/AudioDetect.js" type="text/javascript"></script>
     <script src="./audio/MIDI.js-master/js/MIDI/LoadPlugin.js" type="text/javascript"></script>
