--- a/index.html
+++ b/index.html
@@ -41,6 +41,17 @@
         </div>
       </div>
 
+      <div class="row cm-credits">
+        <div class="span8 offset2">
+          Uses
+          <a href="">uglify</a>,
+          <a href="">MIDI.js</a>
+          and <a href="">jslint</a>.
+          <br/>
+          By <a href="https://twitter.com/dansitu">@dansitu</a> and Ryan Brown for <a href="http://sf.musichackday.org/2013">sf.musichackday.org/2013</a>
+        </div>
+      </div>
+
     </div>
 
     <a href="https://github.com/dansitu/codemusic"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
