--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
       <div class="row cm-credits">
         <div class="span8 offset2">
           Uses
-          <a href="">uglify</a>,
-          <a href="">MIDI.js</a>
-          and <a href="">jslint</a>.
+          <a href="https://github.com/mishoo/UglifyJS">UglifyJS</a>,
+          <a href="https://github.com/douglascrockford/JSLint">JSLint</a>
+          and <a href="https://github.com/mudcube/MIDI.js">MIDI.js</a>
           <br/>
           By <a href="https://twitter.com/dansitu">@dansitu</a> and Ryan Brown for <a href="http://sf.musichackday.org/2013">sf.musichackday.org/2013</a>
         </div>
