--- a/index.html
+++ b/index.html
@@ -16,14 +16,9 @@
       <div class="row cm-title">
         <div class="span12">
           <h1>Code Music</h1>
-          <div class="lead">Create music from your Javascript</div>
+          <div class="lead">Free your code's inner song <i class="icon-music"></i></div>
         </div>
       </div>
-
-      <!-- <div class="row cm-instructions"> -->
-      <!--   <div class="span12"> -->
-      <!--   </div> -->
-      <!-- </div> -->
 
       <div class="row cm-errors">
         <div class="cm-alert-container span8 offset2">
