--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
     <script src="./audio/MIDI.js-master/inc/base64binary.js" type="text/javascript"></script>
 
     <script src='./js/jquery-1.9.1.js'></script>
+    <script src='./js/underscore.js'></script>
+    <script src='./js/backbone.js'></script>
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/jslint.js"></script>
     <script src='./js/compiled-codemuncher.js'></script>
