--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <a href="https://github.com/douglascrockford/JSLint">JSLint</a>
           and <a href="https://github.com/mudcube/MIDI.js">MIDI.js</a>
           <br/>
-          By <a href="https://twitter.com/dansitu">@dansitu</a> and Ryan Brown for <a href="http://sf.musichackday.org/2013">sf.musichackday.org/2013</a>
+          By <a href="https://twitter.com/dansitu">@dansitu</a> and <a href="https://github.com/ryanlbrown">Ryan Brown</a> for <a href="http://sf.musichackday.org/2013">sf.musichackday.org/2013</a>
         </div>
       </div>
 
