Commented out all the emitter stuff for now

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <div class="cm-drag-label span8">
               Drag a javascript file here
             </div>
+            <div class="cm-code"></div>
           </div>
         </div>
       </div>
