--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div id="dragBox" class="span8 offset2">
           <div class="row">
             <div class="cm-drag-label span8">
-              Drag a javascript file here
+              Drag a javascript file here &amp; wait
             </div>
             <div class="cm-code"></div>
           </div>
